# pepper_description

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: robot_INSTALL_PREFIX.cmake.in
convex/: Head-ch.txt  Hip-ch.txt  LBicep-ch.txt  LElbow-ch.txt  LFinger22.dae  LFinger23_link-ch.txt  LFinger43_link-ch.txt  LForeArm-ch.txt  LShoulder-ch.txt  LShoulderPitch.dae  LThumb1.dae  LThumb2_link-ch.txt  Neck-ch.txt  Pelvis-ch.txt  RBicep-ch.txt  RFinger13.dae  RFinger22_link-ch.txt  RFinger23_link-ch.txt  RFinger32_link-ch.txt  RForeArm-ch.txt  RThumb2_link-ch.txt  Tibia-ch.txt  WheelB-ch.txt  WheelFL-ch.txt  WheelFR-ch.txt  camera_base-ch.txt  camera_body-ch.txt  l_wrist-ch.txt  r_wrist-ch.txt  torso-ch.txt
launch/: display.launch  display.rviz  display_ffb.launch  pepper_publisher_ffb.launch  pepper_upload.launch  pepper_upload_ffb.launch
meshes/: camera_base.stl  camera_visor.stl
rsdf/: WheelB_link.rsdf  WheelFL_link.rsdf  WheelFR_link.rsdf  base_footprint.rsdf  base_link.rsdf  l_wrist.rsdf  r_wrist.rsdf
src/: set_vrep_pid_gains.cpp
src/pepper/: __init__.py  pepper.py
urdf/: pepper.urdf  pepper_base_changed_fixed_gazebo.urdf  pepper_ffb.urdf  pepper_no_fingers.urdf  pepper_no_wheels_no_fingers.urdf
vrep/: pepper.ttt  pepper_ffb.ttt
