<?xml version="1.0"?>
<package>
  <name>pepper_description</name>
  <version>0.1.10</version>
  <description>The pepper_description package customized for mc_rtc</description>

  <author>Anastasia Bolotnikova</author>
  <maintainer email="bolotnikov@lirmm.fr">Anastasia Bolotnikova</maintainer>

  <license>Apache 2.0</license>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>xacro</build_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
